--- a/cesium-ifc-viewer/package.json
+++ b/cesium-ifc-viewer/package.json
@@ -24,10 +24,10 @@
     "exploratory"
   ],
   "scripts": {
-    "clean": "rm -rf dist .parcel-cache",
+    "clean": "npx del --force dist .parcel-cache",
     "start": "parcel index.html",
     "build": "parcel build",
-    "prebuild": "npm run clean && mkdir dist",
+    "prebuild": "npm run clean && npx make-dir dist",
     "test": "echo \"Error: no test specified\" && exit 1",
     "prepublishOnly": "npm run build"
   },
@@ -43,7 +43,9 @@
   "devDependencies": {
     "@parcel/transformer-inline-string": "^2.8.3",
     "parcel": "latest",
-    "parcel-reporter-static-files-copy": "^1.5.0"
+    "parcel-reporter-static-files-copy": "^1.5.0",
+    "del-cli": "^5.0.0",
+    "make-dir-cli": "^3.0.0"
   },
   "dependencies": {
     "cesium": "^1.103.0",
