Adds ESLint recommended rules

--- a/cesium-ifc-viewer/.eslintrc.json
+++ b/cesium-ifc-viewer/.eslintrc.json
@@ -1,7 +1,7 @@
 {
   "root": true,
   "plugins": [ "custom-elements" ],
-  "extends": [ "plugin:custom-elements/recommended" ],
+  "extends": [ "eslint:recommended", "plugin:custom-elements/recommended" ],
   "env": {
     "browser": true,
     "es2022": true
