--- a/cesium-viewer/package.json
+++ b/cesium-viewer/package.json
@@ -39,15 +39,18 @@
     "prepublishOnly": "npm run build"
   },
   "devDependencies": {
+    "@parcel/transformer-inline-string": "^2.8.3",
     "del-cli": "^5.0.0",
     "eslint": "^8.36.0",
     "eslint-config-prettier": "^8.8.0",
     "eslint-plugin-custom-elements": "^0.0.7",
     "make-dir-cli": "^3.0.0",
     "parcel": "latest",
+    "parcel-reporter-static-files-copy": "^1.5.0",
     "prettier": "^2.8.6"
   },
   "dependencies": {
+    "cesium": "^1.104.0",
     "lit": "^2.7.0"
   },
   "browser": {
@@ -64,5 +67,23 @@
     "url": false,
     "util": false,
     "zlib": false
-  }
+  },
+  "staticFiles": [
+    {
+      "staticOutPath": "static/Assets",
+      "staticPath": "node_modules/cesium/Build/Cesium/Assets"
+    },
+    {
+      "staticOutPath": "static/ThirdParty",
+      "staticPath": "node_modules/cesium/Build/Cesium/ThirdParty"
+    },
+    {
+      "staticOutPath": "static/Widgets",
+      "staticPath": "node_modules/cesium/Build/Cesium/Widgets"
+    },
+    {
+      "staticOutPath": "static/Workers",
+      "staticPath": "node_modules/cesium/Build/Cesium/Workers"
+    }
+  ]
 }
