Adds static file path for images and data in package.json

--- a/cesium-viewer/package.json
+++ b/cesium-viewer/package.json
@@ -70,6 +70,14 @@
   },
   "staticFiles": [
     {
+      "staticOutPath": "static/Data",
+      "staticPath": "src/assets/data"
+    },
+    {
+      "staticOutPath": "static/img",
+      "staticPath": "src/assets/img"
+    },
+    {
       "staticOutPath": "static/Assets",
       "staticPath": "node_modules/cesium/Build/Cesium/Assets"
     },
