--- a/cesium-viewer/package.json
+++ b/cesium-viewer/package.json
@@ -50,6 +50,7 @@
     "prettier": "^2.8.6"
   },
   "dependencies": {
+    "boxicons": "^2.1.4",
     "cesium": "^1.104.0",
     "lit": "^2.7.0"
   },
