Freezes versions of Web IFC and Cesium deps

--- a/cesium-ifc-viewer/package.json
+++ b/cesium-ifc-viewer/package.json
@@ -51,11 +51,11 @@
     "prettier": "^2.8.6"
   },
   "dependencies": {
-    "cesium": "^1.103.0",
+    "cesium": "1.103.0",
     "lit": "^2.7.0",
     "web-ifc": "0.0.35",
-    "web-ifc-three": "^0.0.121",
-    "web-ifc-viewer": "^1.0.213"
+    "web-ifc-three": "0.0.121",
+    "web-ifc-viewer": "1.0.213"
   },
   "browser": {
     "assert": false,
