--- a/cesium-ifc-viewer/package.json
+++ b/cesium-ifc-viewer/package.json
@@ -40,14 +40,14 @@
   },
   "homepage": "https://github.com/uzufly/exploratory#readme",
   "devDependencies": {
-    "@parcel/transformer-inline-string": "^2.8.3",
+    "@parcel/transformer-inline-string": "^2.10.0",
     "del-cli": "^5.0.0",
     "eslint": "^8.36.0",
     "eslint-config-prettier": "^8.8.0",
     "eslint-plugin-custom-elements": "^0.0.7",
     "make-dir-cli": "^3.0.0",
-    "parcel": "latest",
-    "parcel-reporter-static-files-copy": "^1.5.0",
+    "parcel": "^2.10",
+    "parcel-reporter-static-files-copy": "^1.5.3",
     "prettier": "^2.8.6"
   },
   "dependencies": {
@@ -57,7 +57,7 @@
     "web-ifc-three": "0.0.121",
     "web-ifc-viewer": "1.0.213"
   },
-  "browser": {
+  "alias": {
     "assert": false,
     "buffer": false,
     "crypto": false,
