Chore: updates Cesium from v1.103 to 1.110
Solves the breaking changes introduced in v1.107
(removal of readyPromise across the API)
https://github.com/CesiumGS/cesium/blob/main/CHANGES.md

--- a/cesium-ifc-viewer/package.json
+++ b/cesium-ifc-viewer/package.json
@@ -51,7 +51,7 @@
     "prettier": "^2.8.6"
   },
   "dependencies": {
-    "cesium": "1.103.0",
+    "cesium": "^1.110.0",
     "lit": "^3.0.0",
     "web-ifc": "0.0.35",
     "web-ifc-three": "0.0.121",
