--- a/cesium-ifc-viewer/package.json
+++ b/cesium-ifc-viewer/package.json
@@ -68,6 +68,7 @@
     "prettier": "^3.0.3"
   },
   "dependencies": {
+    "@apollo/client": "^3.9.4",
     "@speckle/objectloader": "^2.17.16",
     "cesium": "^1.110.1",
     "lit": "^3.0.1",
