--- a/cesium-ifc-viewer/package.json
+++ b/cesium-ifc-viewer/package.json
@@ -71,6 +71,7 @@
     "@apollo/client": "^3.9.4",
     "@speckle/objectloader": "^2.17.16",
     "cesium": "^1.110.1",
+    "graphql": "^16.8.1",
     "lit": "^3.0.1",
     "web-ifc": "0.0.35",
     "web-ifc-three": "0.0.121",
